# CompukterGraphics

Octaedron/: CMakeLists.txt  ohohogangingup.cpp  structures.h
domik/: CMakeLists.txt  main.cpp  painting.cpp  painting.h
tetris/: CMakeLists.txt  main.cpp  properties.ini  tetris.cpp  tetris.h
